--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^9.0.1",
+    "midtrans-client": "^1.3.1",
     "moment": "^2.29.3",
     "mongoose": "^6.2.10",
     "nodemon": "^3.0.1",
