--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.8.2",
     "@mui/x-data-grid": "^5.12.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -22,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.11.0",
+    "react-pdf": "^7.3.3",
     "react-redux": "^7.2.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
